fixing break in page of details

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,8 @@ html {
 
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 ::selection {
@@ -169,4 +171,3 @@ table {
   opacity: 1;
   transform: translateY(0) scale(1);
 }
-
